--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "url": "git+https://github.com/.git"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.16",
-    "@mdx-js/react": "^1.0.16",
-    "@weknow/gatsby-remark-twitter": "^0.2.1",
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
+    "@weknow/gatsby-remark-twitter": "^0.2.3",
     "gatsby": "^2.19.32",
-    "gatsby-image": "^2.1.1",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-feed": "^2.2.1",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-netlify": "^2.0.17",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.36",
-    "gatsby-remark-autolink-headers": "^2.0.16",
-    "gatsby-remark-copy-linked-files": "^2.0.12",
+    "gatsby-image": "^2.2.43",
+    "gatsby-plugin-feed": "^2.3.28",
+    "gatsby-plugin-manifest": "^2.2.44",
+    "gatsby-plugin-mdx": "^1.0.77",
+    "gatsby-plugin-netlify": "^2.1.34",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-sharp": "^2.4.7",
+    "gatsby-remark-autolink-headers": "^2.1.25",
+    "gatsby-remark-copy-linked-files": "^2.1.38",
     "gatsby-remark-embed-video": "^1.7.1",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.11",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-transformer-sharp": "^2.1.19",
-    "prism-react-renderer": "^0.1.6",
+    "gatsby-remark-images": "^3.1.46",
+    "gatsby-remark-responsive-iframe": "^2.2.33",
+    "gatsby-remark-smartypants": "^2.1.22",
+    "gatsby-source-filesystem": "^2.1.50",
+    "gatsby-transformer-sharp": "^2.3.17",
+    "prism-react-renderer": "^0.1.7",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
