--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "babel-preset-gatsby": "0.8.0",
     "browserslist": "4.16.5",
     "concurrently": "5.3.0",
+    "dracula-prism": "^2.1.4",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -104,6 +105,8 @@
     "eslint-watch": "6.0.1",
     "flow-bin": "^0.131.0",
     "flow-typed": "^3.2.1",
+    "gatsby-code-buttons-dracula": "^0.1.2",
+    "gatsby-remark-code-buttons": "^2.0.7",
     "gh-pages": "3.1.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
