--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "error",
         "always"
       ],
+      "import/extensions": [0, { "js": "always" }],
       "import/no-extraneous-dependencies": [
         "error",
         {
