--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "flow": "flow",
     "lint:js": "eslint --cache --ext .js,.jsx .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
-    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\" \"npm run flow\"",
+    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\"",
     "test": "jest --config ./jest/jest-config.js",
     "test:coverage": "jest --coverage --config ./jest/jest-config.js",
     "test:watch": "jest --watch --config ./jest/jest-config.js"
@@ -98,7 +98,7 @@
     "dracula-prism": "^2.1.4",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "23.20.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.23.2",
