--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   ],
   "dependencies": {
     "bluebird": "^3.7.2",
-    "classnames": "^2.2.6",
-    "codecov": "^3.8.1",
+    "classnames": "^2.3.2",
+    "codecov": "^3.8.3",
     "gatsby": "^2.32.13",
     "gatsby-link": "^2.7.0",
     "gatsby-plugin-catch-links": "^2.10.0",
@@ -84,27 +84,27 @@
   "devDependencies": {
     "@babel/core": "7.14.2",
     "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "7.9.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.9.0",
-    "@babel/preset-env": "7.12.7",
-    "@babel/preset-react": "7.13.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "autoprefixer": "9.8.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
     "babel-preset-gatsby": "0.8.0",
-    "browserslist": "4.16.5",
+    "browserslist": "^4.21.7",
     "concurrently": "5.3.0",
-    "dracula-prism": "^2.1.4",
+    "dracula-prism": "^2.1.13",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "23.20.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-watch": "6.0.1",
     "flow-bin": "^0.131.0",
-    "flow-typed": "^3.2.1",
+    "flow-typed": "^3.8.0",
     "gatsby-code-buttons-dracula": "^0.1.2",
     "gatsby-remark-code-buttons": "^2.0.7",
     "gh-pages": "3.1.0",
