--- a/content/config.json
+++ b/content/config.json
@@ -1,47 +1,41 @@
 {
-  "title": "Blog by John Doe",
-  "url": "https://lumen.alxshelepenok.com",
-  "subtitle": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+  "title": "Blog do Gabs",
+  "url": "https://gabrielaraujo.dev",
+  "subtitle": "Desenvolvedor Web, fã de basquete, entusiasta DIY, e ex-professor.",
   "copyright": "© All rights reserved.",
-  "googleAnalyticsId": "UA-73379983-2",
+  "googleAnalyticsId": "UA-50425694-1",
   "disqusShortname": "",
   "postsLimit": 4,
   "pathPrefix": "/",
   "menu": [
     {
-      "label": "Articles",
+      "label": "Artigos",
       "path": "/"
     },
     {
-      "label": "About me",
+      "label": "Sobre mim",
       "path": "/pages/about"
     },
     {
-      "label": "Contact me",
+      "label": "Contato",
       "path": "/pages/contacts"
     }
   ],
   "author": {
-    "name": "John Doe",
-    "photo": "/photo.jpg",
-    "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+    "name": "Gabriel Araujo",
+    "photo": "/profile.jpg",
+    "bio": "Desenvolvedor Web, fã de basquete, entusiasta DIY, e ex-professor.",
     "contacts": {
       "rss": "",
-      "email": "",
-      "github": "#",
-      "facebook": "#",
-      "telegram": "#",
-      "twitter": "#",
-      "linkedin": "#",
-      "instagram": "#",
-      "mastodon": "#",
-      "line": "",
-      "weibo": "",
-      "gitlab": "",
-      "medium": "",
-      "youtube": "",
-      "codepen": "",
-      "soundcloud": ""
+      "email": "contato@gabrielaraujo.dev",
+      "github": "gabrielaraujof",
+      "telegram": "gabrielaraujof",
+      "twitter": "gabseuaraujo",
+      "linkedin": "gabrielaraujof",
+      "gitlab": "gabrielaraujof",
+      "medium": "gabrielaraujof",
+      "youtube": "gabrielaraujof",
+      "codepen": "gabrielaraujof"
     }
   }
 }
