--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-lumen",
+  "name": "personal-blog",
   "version": "1.4.868",
-  "description": "A constantly evolving and thoughtful architecture for creating static blogs with Gatsby",
+  "description": "Personal blog sources!",
   "keywords": [
     "gatsby",
     "graphql",
@@ -13,7 +13,7 @@
     "url": "https://github.com/alxshelepenok/gatsby-starter-lumen.git"
   },
   "license": "MIT",
-  "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
+  "author": "Gabriel Araujo <contact@gabrielaraujo.dev>",
   "scripts": {
     "build": "npm run clean && gatsby build",
     "clean": "rimraf .cache public",
